resources/sass/tables.scss
table{

    margin-bottom: 2rem !important;

    // Add a bit margin to hide horizontal scroll fade
    @include media-breakpoint-between(xs, md) {
        background: transparent;
        margin-right: 2rem;
    }

    th:first-child,td:first-child{
        padding-left: 1rem !important;
    }

    th:last-child,td:last-child{
        padding-right: 1rem !important;
    }

    .hover-show-group{
        min-width: 125px;
    }

    tr.pointer {
        cursor: pointer;

        // Set th's under to color if .active is present

        &.active th, &.active td{
            background-color: #e2e2e2;
        }

        .expand-chevron {
            transition: transform 0.2s ease;
            opacity: 0.35;
        }

        &:hover .expand-chevron {
            opacity: 0.7;
        }

        .expand-chevron--open {
            transform: rotate(90deg);
            opacity: 1;
        }
    }

    tr .hover-show{
        height: 1.5rem;
        display: none;

        @include media-breakpoint-between(sm, lg) {
            display: block;
        }

        &.secondary{
            @include media-breakpoint-between(sm, lg) {
                display: none;
            }
        }
    }

    tr:hover .hover-show{
        display: block;

        &.secondary{
            @include media-breakpoint-between(sm, lg) {
                display: none;
            }
        }
    }

    tr.showmore-hidden{
        display: none;
    }

    @include media-breakpoint-up(sm) {
        tr[data-detail-row] {
            display: none !important;
        }
    }

    &.no-padding > thead > tr> th, &.no-padding > tbody > tr > td{
        padding-left: 0 !important;
        padding-right: 0 !important;
    }

    &.card-table{
        --bs-table-color: white;
        --bs-table-bg: transparent;
        border-color: $gray-800;
        margin-bottom: 0 !important;
    }

}

